<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fon_green"
        android:scaleType="centerCrop" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            tools:context="factory.arcanum.ninth.myfirstproject.AskHelp">

            <TextView
                android:id="@+id/HelpText"
                android:text="@string/HelpText"
                style="@style/list"
                android:textColor="#000" />

            <Button
                style="@style/buttonsMore"
                android:text="@string/ring_friends_up"
                android:layout_below="@id/HelpText"
                android:background="#fbd604"
                android:onClick="Ring" />

            <Button
                style="@style/buttonsMore"
                android:text="@string/or_write_to_them"
                android:layout_below="@id/HelpText"
                android:background="#fbd604"
                android:layout_alignParentRight="true"
                android:nestedScrollingEnabled="false"
                android:onClick="Email" />

        </RelativeLayout>
    </ScrollView>
</FrameLayout>